--- a/src/tools/ScratchWinRTClient/ScratchWinRTClient.vcxproj
+++ b/src/tools/ScratchWinRTClient/ScratchWinRTClient.vcxproj
@@ -101,14 +101,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="HostManager.h" />
+    <ClInclude Include="HostManager.h">
+      <DependentUpon>HostManager.idl</DependentUpon>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="HostManager.cpp" />
+    <ClCompile Include="HostManager.cpp">
+      <DependentUpon>HostManager.idl</DependentUpon>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Midl Include="HostManager.idl" />
