--- a/src/cascadia/TerminalCore/lib/terminalcore-lib.vcxproj
+++ b/src/cascadia/TerminalCore/lib/terminalcore-lib.vcxproj
@@ -7,7 +7,13 @@
     <TargetName>TerminalCore</TargetName>
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <WindowsTargetPlatformMinVersion>10.0.17763.0</WindowsTargetPlatformMinVersion>
-    <RootNamespace>Microsoft.Terminal.Core</RootNamespace>
+    <RootNamespace>Microsoft.Terminal.TerminalControl</RootNamespace>
+    <!--
+      DON'T REDIRECT OUR OUTPUT.
+      Setting this will tell cppwinrt.build.post.props to copy our output from
+      the default OutDir up one level, so the wapproj will be able to find it.
+     -->
+    <NoOutputRedirection>true</NoOutputRedirection>
   </PropertyGroup>
 
   <!-- Imported WinRT generated files must go up here to get excluded from Audit correctly. -->
