--- a/src/host/dll/Host.DLL.vcxproj
+++ b/src/host/dll/Host.DLL.vcxproj
@@ -5,27 +5,33 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>host</RootNamespace>
     <ProjectName>Host.DLL</ProjectName>
-    <TargetName>ConhostV2</TargetName>
+    <TargetName>OpenConsoleDll</TargetName>
     <ConfigurationType>DynamicLibrary</ConfigurationType>
   </PropertyGroup>
   <Import Project="$(SolutionDir)src\common.build.pre.props" />
-  <ItemGroup>
-    <ClCompile Include="..\main.cpp" />
-    <ClCompile Include="..\precomp.cpp">
-      <PrecompiledHeader>Create</PrecompiledHeader>
-      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-    </ClCompile>
-  </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\precomp.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\precomp.cpp">
+      <PrecompiledHeader>Create</PrecompiledHeader>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+    </ClCompile>
+    <ClCompile Include="..\exemain.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\buffer\out\lib\bufferout.vcxproj">
+      <Project>{0cf235bd-2da0-407e-90ee-c467e8bbc714}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\interactivity\base\lib\InteractivityBase.vcxproj">
       <Project>{06ec74cb-9a12-429c-b551-8562ec964846}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\interactivity\win32\lib\win32.LIB.vcxproj">
       <Project>{06ec74cb-9a12-429c-b551-8532ec964726}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\internal\internal.vcxproj">
+      <Project>{ef3e32a7-5ff6-42b4-b6e2-96cd7d033f00}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\propslib\propslib.vcxproj">
       <Project>{345fd5a4-b32b-4f29-bd1c-b033bd2c35cc}</Project>
@@ -33,8 +39,14 @@
     <ProjectReference Include="..\..\renderer\base\lib\base.vcxproj">
       <Project>{af0a096a-8b3a-4949-81ef-7df8f0fee91f}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\renderer\dx\lib\dx.vcxproj">
+      <Project>{48d21369-3d7b-4431-9967-24e81292cf62}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\renderer\gdi\lib\gdi.vcxproj">
       <Project>{1c959542-bac2-4e55-9a6d-13251914cbb9}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\renderer\vt\lib\vt.vcxproj">
+      <Project>{990f2657-8580-4828-943f-5dd657d11842}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\server\lib\server.vcxproj">
       <Project>{18d09a24-8240-42d6-8cb6-236eee820262}</Project>
@@ -56,7 +68,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ConhostV2.def" />
+    <None Include="OpenConsoleDll.def" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Host.DLL.rc" />
@@ -68,10 +80,10 @@
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <ModuleDefinitionFile>ConhostV2.def</ModuleDefinitionFile>
+      <ModuleDefinitionFile>OpenConsoleDll.def</ModuleDefinitionFile>
       <AllowIsolation>true</AllowIsolation>
       <AdditionalManifestDependencies>type='win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='*' publicKeyToken='6595b64144ccf1df' language='*'</AdditionalManifestDependencies>
     </Link>
