--- a/src/cascadia/TerminalApp/lib/TerminalAppLib.vcxproj
+++ b/src/cascadia/TerminalApp/lib/TerminalAppLib.vcxproj
@@ -42,179 +42,179 @@
       For any types that use XAML information, if their .idl and .h aren't
       marked DependentUpon the corresponding .xaml file, XamlTypeInfo.g.h won't
       pick it up correctly. -->
-    <ApplicationDefinition Include="..\App.xaml">
+    <ApplicationDefinition Include="App.xaml">
       <SubType>Designer</SubType>
     </ApplicationDefinition>
   </ItemGroup>
   <!-- When we add other user controls, they should go in here as so: -->
   <ItemGroup>
-    <Page Include="../MinMaxCloseControl.xaml">
+    <Page Include="MinMaxCloseControl.xaml">
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="../TerminalPage.xaml">
+    <Page Include="TerminalPage.xaml">
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="../TitlebarControl.xaml">
+    <Page Include="TitlebarControl.xaml">
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="../TabRowControl.xaml">
+    <Page Include="TabRowControl.xaml">
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="../ColorPickupFlyout.xaml">
+    <Page Include="ColorPickupFlyout.xaml">
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="../CommandPalette.xaml">
+    <Page Include="CommandPalette.xaml">
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <!-- ========================= Headers ======================== -->
   <ItemGroup>
-    <ClInclude Include="../App.base.h" />
-    <ClInclude Include="../AppCommandlineArgs.h" />
-    <ClInclude Include="../Commandline.h" />
-    <ClInclude Include="../MinMaxCloseControl.h">
-      <DependentUpon>../MinMaxCloseControl.xaml</DependentUpon>
+    <ClInclude Include="App.base.h" />
+    <ClInclude Include="AppCommandlineArgs.h" />
+    <ClInclude Include="Commandline.h" />
+    <ClInclude Include="MinMaxCloseControl.h">
+      <DependentUpon>MinMaxCloseControl.xaml</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../TerminalPage.h">
-      <DependentUpon>../TerminalPage.xaml</DependentUpon>
+    <ClInclude Include="TerminalPage.h">
+      <DependentUpon>TerminalPage.xaml</DependentUpon>
       <SubType>Code</SubType>
     </ClInclude>
-    <ClInclude Include="../TitlebarControl.h">
-      <DependentUpon>../TitlebarControl.xaml</DependentUpon>
+    <ClInclude Include="TitlebarControl.h">
+      <DependentUpon>TitlebarControl.xaml</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../TabRowControl.h">
-      <DependentUpon>../TabRowControl.xaml</DependentUpon>
+    <ClInclude Include="TabRowControl.h">
+      <DependentUpon>TabRowControl.xaml</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../ColorPickupFlyout.h">
-      <DependentUpon>../ColorPickupFlyout.xaml</DependentUpon>
+    <ClInclude Include="ColorPickupFlyout.h">
+      <DependentUpon>ColorPickupFlyout.xaml</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../CommandPalette.h">
-      <DependentUpon>../CommandPalette.xaml</DependentUpon>
+    <ClInclude Include="CommandPalette.h">
+      <DependentUpon>CommandPalette.xaml</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../Command.h">
-      <DependentUpon>../Command.idl</DependentUpon>
+    <ClInclude Include="Command.h">
+      <DependentUpon>Command.idl</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../CommandKeyChordVisibilityConverter.h">
-      <DependentUpon>../CommandKeyChordVisibilityConverter.idl</DependentUpon>
+    <ClInclude Include="CommandKeyChordVisibilityConverter.h">
+      <DependentUpon>CommandKeyChordVisibilityConverter.idl</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../Tab.h">
-      <DependentUpon>../Tab.idl</DependentUpon>
+    <ClInclude Include="Tab.h">
+      <DependentUpon>Tab.idl</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../Pane.h" />
-    <ClInclude Include="../ColorScheme.h" />
-    <ClInclude Include="../GlobalAppSettings.h" />
-    <ClInclude Include="../Profile.h" />
-    <ClInclude Include="../CascadiaSettings.h" />
-    <ClInclude Include="../KeyChordSerialization.h" />
-    <ClInclude Include="../JsonUtils.h" />
-    <ClInclude Include="../Utils.h" />
-    <ClInclude Include="../DefaultProfileUtils.h" />
-    <ClInclude Include="../TerminalSettingsSerializationHelpers.h" />
-    <ClInclude Include="../TerminalWarnings.h" />
-    <ClInclude Include="../IDynamicProfileGenerator.h" />
-    <ClInclude Include="../PowershellCoreProfileGenerator.h" />
-    <ClInclude Include="../WslDistroGenerator.h" />
-    <ClInclude Include="../AzureCloudShellGenerator.h" />
-    <ClInclude Include="../TelnetGenerator.h" />
-    <ClInclude Include="../ColorHelper.h" />
-    <ClInclude Include="../TerminalSettings.h">
-      <DependentUpon>../TerminalSettings.idl</DependentUpon>
+    <ClInclude Include="Pane.h" />
+    <ClInclude Include="ColorScheme.h" />
+    <ClInclude Include="GlobalAppSettings.h" />
+    <ClInclude Include="Profile.h" />
+    <ClInclude Include="CascadiaSettings.h" />
+    <ClInclude Include="KeyChordSerialization.h" />
+    <ClInclude Include="JsonUtils.h" />
+    <ClInclude Include="Utils.h" />
+    <ClInclude Include="DefaultProfileUtils.h" />
+    <ClInclude Include="TerminalSettingsSerializationHelpers.h" />
+    <ClInclude Include="TerminalWarnings.h" />
+    <ClInclude Include="IDynamicProfileGenerator.h" />
+    <ClInclude Include="PowershellCoreProfileGenerator.h" />
+    <ClInclude Include="WslDistroGenerator.h" />
+    <ClInclude Include="AzureCloudShellGenerator.h" />
+    <ClInclude Include="TelnetGenerator.h" />
+    <ClInclude Include="ColorHelper.h" />
+    <ClInclude Include="TerminalSettings.h">
+      <DependentUpon>TerminalSettings.idl</DependentUpon>
     </ClInclude>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="../ShortcutActionDispatch.h">
-      <DependentUpon>../ShortcutActionDispatch.idl</DependentUpon>
+    <ClInclude Include="ShortcutActionDispatch.h">
+      <DependentUpon>ShortcutActionDispatch.idl</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../ActionArgs.h">
-      <DependentUpon>../ActionArgs.idl</DependentUpon>
+    <ClInclude Include="ActionArgs.h">
+      <DependentUpon>ActionArgs.idl</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../ActionAndArgs.h">
-      <DependentUpon>../ActionArgs.idl</DependentUpon>
+    <ClInclude Include="ActionAndArgs.h">
+      <DependentUpon>ActionArgs.idl</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../DebugTapConnection.h" />
-    <ClInclude Include="../AppKeyBindings.h">
-      <DependentUpon>../AppKeyBindings.idl</DependentUpon>
+    <ClInclude Include="DebugTapConnection.h" />
+    <ClInclude Include="AppKeyBindings.h">
+      <DependentUpon>AppKeyBindings.idl</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../App.h">
-      <DependentUpon>../App.xaml</DependentUpon>
+    <ClInclude Include="App.h">
+      <DependentUpon>App.xaml</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../AppLogic.h">
-      <DependentUpon>../AppLogic.idl</DependentUpon>
+    <ClInclude Include="AppLogic.h">
+      <DependentUpon>AppLogic.idl</DependentUpon>
     </ClInclude>
   </ItemGroup>
   <!-- ========================= Cpp Files ======================== -->
   <ItemGroup>
-    <ClCompile Include="../init.cpp" />
-    <ClCompile Include="../AppCommandlineArgs.cpp" />
-    <ClCompile Include="../Commandline.cpp" />
-    <ClCompile Include="../MinMaxCloseControl.cpp">
-      <DependentUpon>../MinMaxCloseControl.xaml</DependentUpon>
+    <ClCompile Include="init.cpp" />
+    <ClCompile Include="AppCommandlineArgs.cpp" />
+    <ClCompile Include="Commandline.cpp" />
+    <ClCompile Include="MinMaxCloseControl.cpp">
+      <DependentUpon>MinMaxCloseControl.xaml</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../TerminalPage.cpp">
-      <DependentUpon>../TerminalPage.xaml</DependentUpon>
+    <ClCompile Include="TerminalPage.cpp">
+      <DependentUpon>TerminalPage.xaml</DependentUpon>
       <SubType>Code</SubType>
     </ClCompile>
-    <ClCompile Include="../TitlebarControl.cpp">
-      <DependentUpon>../TitlebarControl.xaml</DependentUpon>
+    <ClCompile Include="TitlebarControl.cpp">
+      <DependentUpon>TitlebarControl.xaml</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../TabRowControl.cpp">
-      <DependentUpon>../TabRowControl.xaml</DependentUpon>
+    <ClCompile Include="TabRowControl.cpp">
+      <DependentUpon>TabRowControl.xaml</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../ColorPickupFlyout.cpp">
-      <DependentUpon>../ColorPickupFlyout.xaml</DependentUpon>
+    <ClCompile Include="ColorPickupFlyout.cpp">
+      <DependentUpon>ColorPickupFlyout.xaml</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../CommandPalette.cpp">
-      <DependentUpon>../CommandPalette.xaml</DependentUpon>
+    <ClCompile Include="CommandPalette.cpp">
+      <DependentUpon>CommandPalette.xaml</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../Command.cpp">
-      <DependentUpon>../Command.idl</DependentUpon>
+    <ClCompile Include="Command.cpp">
+      <DependentUpon>Command.idl</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../CommandKeyChordVisibilityConverter.cpp">
-      <DependentUpon>../CommandKeyChordVisibilityConverter.idl</DependentUpon>
+    <ClCompile Include="CommandKeyChordVisibilityConverter.cpp">
+      <DependentUpon>CommandKeyChordVisibilityConverter.idl</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../Tab.cpp">
-      <DependentUpon>../Tab.idl</DependentUpon>
+    <ClCompile Include="Tab.cpp">
+      <DependentUpon>Tab.idl</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../Pane.cpp" />
-    <ClCompile Include="../ColorScheme.cpp" />
-    <ClCompile Include="../GlobalAppSettings.cpp" />
-    <ClCompile Include="../Profile.cpp" />
-    <ClCompile Include="../CascadiaSettings.cpp" />
-    <ClCompile Include="../CascadiaSettingsSerialization.cpp" />
-    <ClCompile Include="../AppKeyBindingsSerialization.cpp" />
-    <ClCompile Include="../KeyChordSerialization.cpp" />
-    <ClCompile Include="../DefaultProfileUtils.cpp" />
-    <ClCompile Include="../PowershellCoreProfileGenerator.cpp" />
-    <ClCompile Include="../WslDistroGenerator.cpp" />
-    <ClCompile Include="../AzureCloudShellGenerator.cpp" />
-    <ClCompile Include="../Pane.LayoutSizeNode.cpp" />
-    <ClCompile Include="../ColorHelper.cpp" />
-    <ClCompile Include="../DebugTapConnection.cpp" />
-    <ClCompile Include="../TerminalSettings.cpp">
-      <DependentUpon>../TerminalSettings.idl</DependentUpon>
+    <ClCompile Include="Pane.cpp" />
+    <ClCompile Include="ColorScheme.cpp" />
+    <ClCompile Include="GlobalAppSettings.cpp" />
+    <ClCompile Include="Profile.cpp" />
+    <ClCompile Include="CascadiaSettings.cpp" />
+    <ClCompile Include="CascadiaSettingsSerialization.cpp" />
+    <ClCompile Include="AppKeyBindingsSerialization.cpp" />
+    <ClCompile Include="KeyChordSerialization.cpp" />
+    <ClCompile Include="DefaultProfileUtils.cpp" />
+    <ClCompile Include="PowershellCoreProfileGenerator.cpp" />
+    <ClCompile Include="WslDistroGenerator.cpp" />
+    <ClCompile Include="AzureCloudShellGenerator.cpp" />
+    <ClCompile Include="Pane.LayoutSizeNode.cpp" />
+    <ClCompile Include="ColorHelper.cpp" />
+    <ClCompile Include="DebugTapConnection.cpp" />
+    <ClCompile Include="TerminalSettings.cpp">
+      <DependentUpon>TerminalSettings.idl</DependentUpon>
     </ClCompile>
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="../AppKeyBindings.cpp">
-      <DependentUpon>../AppKeyBindings.idl</DependentUpon>
+    <ClCompile Include="AppKeyBindings.cpp">
+      <DependentUpon>AppKeyBindings.idl</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../ShortcutActionDispatch.cpp">
-      <DependentUpon>../ShortcutActionDispatch.idl</DependentUpon>
+    <ClCompile Include="ShortcutActionDispatch.cpp">
+      <DependentUpon>ShortcutActionDispatch.idl</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../ActionAndArgs.cpp">
-      <DependentUpon>../ActionArgs.idl</DependentUpon>
+    <ClCompile Include="ActionAndArgs.cpp">
+      <DependentUpon>ActionArgs.idl</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../ActionArgs.cpp">
-      <DependentUpon>../ActionArgs.idl</DependentUpon>
+    <ClCompile Include="ActionArgs.cpp">
+      <DependentUpon>ActionArgs.idl</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../App.cpp">
-      <DependentUpon>../App.xaml</DependentUpon>
+    <ClCompile Include="App.cpp">
+      <DependentUpon>App.xaml</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../AppActionHandlers.cpp">
-      <DependentUpon>../App.xaml</DependentUpon>
+    <ClCompile Include="AppActionHandlers.cpp">
+      <DependentUpon>App.xaml</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../AppLogic.cpp">
-      <DependentUpon>../AppLogic.idl</DependentUpon>
+    <ClCompile Include="AppLogic.cpp">
+      <DependentUpon>AppLogic.idl</DependentUpon>
     </ClCompile>
     <!-- You _NEED_ to include this file and the jsoncpp IncludePath (below) if
     you want to use jsoncpp -->
@@ -227,48 +227,48 @@
   <ItemGroup>
     <!-- If you add idl files here, make sure to include their implementation's
     header in TerminalApp.vcxproj (as well as in this file) -->
-    <Midl Include="../IDirectKeyListener.idl" />
-    <Midl Include="../App.idl">
-      <DependentUpon>../App.xaml</DependentUpon>
+    <Midl Include="IDirectKeyListener.idl" />
+    <Midl Include="App.idl">
+      <DependentUpon>App.xaml</DependentUpon>
     </Midl>
-    <Midl Include="../ShortcutActionDispatch.idl" />
-    <Midl Include="../AppKeyBindings.idl" />
-    <Midl Include="../AppLogic.idl" />
-    <Midl Include="../ActionArgs.idl" />
-    <Midl Include="../MinMaxCloseControl.idl">
-      <DependentUpon>../MinMaxCloseControl.xaml</DependentUpon>
+    <Midl Include="ShortcutActionDispatch.idl" />
+    <Midl Include="AppKeyBindings.idl" />
+    <Midl Include="AppLogic.idl" />
+    <Midl Include="ActionArgs.idl" />
+    <Midl Include="MinMaxCloseControl.idl">
+      <DependentUpon>MinMaxCloseControl.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
-    <Midl Include="../TerminalPage.idl">
-      <DependentUpon>../TerminalPage.xaml</DependentUpon>
+    <Midl Include="TerminalPage.idl">
+      <DependentUpon>TerminalPage.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
-    <Midl Include="../TitlebarControl.idl">
-      <DependentUpon>../TitlebarControl.xaml</DependentUpon>
+    <Midl Include="TitlebarControl.idl">
+      <DependentUpon>TitlebarControl.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
-    <Midl Include="../TabRowControl.idl">
-      <DependentUpon>../TabRowControl.xaml</DependentUpon>
+    <Midl Include="TabRowControl.idl">
+      <DependentUpon>TabRowControl.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
-    <Midl Include="../ColorPickupFlyout.idl">
-      <DependentUpon>../ColorPickupFlyout.xaml</DependentUpon>
+    <Midl Include="ColorPickupFlyout.idl">
+      <DependentUpon>ColorPickupFlyout.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
-    <Midl Include="../CommandPalette.idl">
-      <DependentUpon>../CommandPalette.xaml</DependentUpon>
+    <Midl Include="CommandPalette.idl">
+      <DependentUpon>CommandPalette.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
-    <Midl Include="../Command.idl" />
-    <Midl Include="../CommandKeyChordVisibilityConverter.idl" />
-    <Midl Include="../Tab.idl" />
-    <Midl Include="../TerminalSettings.idl" />
+    <Midl Include="Command.idl" />
+    <Midl Include="CommandKeyChordVisibilityConverter.idl" />
+    <Midl Include="Tab.idl" />
+    <Midl Include="TerminalSettings.idl" />
   </ItemGroup>
   <!-- ========================= Misc Files ======================== -->
   <ItemGroup>
     <PRIResource Include="..\Resources\en-US\Resources.resw" />
     <OCResourceDirectory Include="../Resources" />
-    <None Include="../packages.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <!-- ========================= Project References ======================== -->
   <ItemGroup>
