--- a/src/til/ut_til/til.unit.tests.vcxproj.filters
+++ b/src/til/ut_til/til.unit.tests.vcxproj.filters
@@ -13,6 +13,7 @@
     <ClCompile Include="RectangleTests.cpp" />
     <ClCompile Include="BitmapTests.cpp" />
     <ClCompile Include="OperatorTests.cpp" />
+    <ClCompile Include="ClumpTests.cpp" />
     <ClCompile Include="MathTests.cpp" />
     <ClCompile Include="BaseTests.cpp" />
     <ClCompile Include="SPSCTests.cpp" />
