--- a/src/cascadia/TerminalSettingsEditor/TerminalSettingsEditor.vcxproj.filters
+++ b/src/cascadia/TerminalSettingsEditor/TerminalSettingsEditor.vcxproj.filters
@@ -5,41 +5,77 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HomeGridItem.cpp" />
-    <ClCompile Include="ObjectModel\AppSettings.cpp" />
-    <ClCompile Include="ObjectModel\ColorScheme.cpp" />
-    <ClCompile Include="ObjectModel\ColorSchemeModel.cpp" />
-    <ClCompile Include="ObjectModel\GlobalSettings.cpp" />
-    <ClCompile Include="ObjectModel\GlobalSettingsModel.cpp" />
-    <ClCompile Include="ObjectModel\Profile.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="SettingsControlViewModel.cpp" />
+    <ClCompile Include="ObjectModel\ColorSchemeModel.cpp">
+      <Filter>ObjectModel</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectModel\ColorScheme.cpp">
+      <Filter>ObjectModel</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectModel\AppSettings.cpp">
+      <Filter>ObjectModel</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectModel\GlobalSettings.cpp">
+      <Filter>ObjectModel</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectModel\GlobalSettingsModel.cpp">
+      <Filter>ObjectModel</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectModel\Profile.cpp">
+      <Filter>ObjectModel</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HomeGridItem.h" />
-    <ClInclude Include="ObjectModel\AppSettings.h" />
-    <ClInclude Include="ObjectModel\ColorScheme.h" />
-    <ClInclude Include="ObjectModel\ColorSchemeModel.h" />
-    <ClInclude Include="ObjectModel\GlobalSettings.h" />
-    <ClInclude Include="ObjectModel\GlobalSettingsModel.h" />
-    <ClInclude Include="ObjectModel\Profile.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="SettingsControlViewModel.h" />
+    <ClInclude Include="ObjectModel\ColorSchemeModel.h">
+      <Filter>ObjectModel</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectModel\ColorScheme.h">
+      <Filter>ObjectModel</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectModel\AppSettings.h">
+      <Filter>ObjectModel</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectModel\GlobalSettings.h">
+      <Filter>ObjectModel</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectModel\GlobalSettingsModel.h">
+      <Filter>ObjectModel</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectModel\Profile.h">
+      <Filter>ObjectModel</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest" />
   </ItemGroup>
   <ItemGroup>
-    <Midl Include="ObjectModel\ColorScheme.idl" />
     <Midl Include="HomeGridItem.idl" />
-    <Midl Include="ObjectModel\ColorSchemeModel.idl" />
-    <Midl Include="ObjectModel\GlobalSettings.idl" />
-    <Midl Include="ObjectModel\GlobalSettingsModel.idl" />
-    <Midl Include="ObjectModel\Profile.idl" />
-    <Midl Include="ObjectModel\ProfileModel.idl" />
     <Midl Include="SettingsControlViewModel.idl" />
+    <Midl Include="ObjectModel\ColorSchemeModel.idl">
+      <Filter>ObjectModel</Filter>
+    </Midl>
+    <Midl Include="ObjectModel\ColorScheme.idl">
+      <Filter>ObjectModel</Filter>
+    </Midl>
+    <Midl Include="ObjectModel\GlobalSettings.idl">
+      <Filter>ObjectModel</Filter>
+    </Midl>
+    <Midl Include="ObjectModel\GlobalSettingsModel.idl">
+      <Filter>ObjectModel</Filter>
+    </Midl>
+    <Midl Include="ObjectModel\Profile.idl">
+      <Filter>ObjectModel</Filter>
+    </Midl>
+    <Midl Include="ObjectModel\ProfileModel.idl">
+      <Filter>ObjectModel</Filter>
+    </Midl>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -59,5 +95,10 @@
     <Page Include="NewTabOptionPanelControl.xaml" />
     <Page Include="Profiles.xaml" />
     <Page Include="Rendering.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="ObjectModel">
+      <UniqueIdentifier>{46598618-8219-4016-ae77-cb53d953645a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
