structure of the handoff.

--- a/src/host/dll/Host.DLL.vcxproj
+++ b/src/host/dll/Host.DLL.vcxproj
@@ -19,6 +19,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <ClCompile Include="..\exemain.cpp" />
+    <ClCompile Include="dllmain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\buffer\out\lib\bufferout.vcxproj">
