--- a/src/host/lib/hostlib.vcxproj
+++ b/src/host/lib/hostlib.vcxproj
@@ -8,6 +8,20 @@
     <TargetName>ConhostV2Lib</TargetName>
     <ConfigurationType>StaticLibrary</ConfigurationType>
   </PropertyGroup>
+  <ItemDefinitionGroup>
+    <Midl>
+      <OutputDirectory>$(SolutionDir)src\host\</OutputDirectory>
+    </Midl>
+  </ItemDefinitionGroup>
+  <ItemGroup>
+    <Midl Include="..\IConsoleHandoff.idl" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\Handoff.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Handoff.h" />
+  </ItemGroup>
   <Import Project="$(SolutionDir)src\common.build.pre.props" />
   <!-- DONT ADD NEW FILES HERE, ADD THEM TO host-common.vcxitems -->
   <Import Project="$(SolutionDir)src\host\host-common.vcxitems" />
