--- a/src/host/exe/Host.EXE.vcxproj
+++ b/src/host/exe/Host.EXE.vcxproj
@@ -83,6 +83,8 @@
       <AdditionalIncludeDirectories>..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
+      <ModuleDefinitionFile>
+      </ModuleDefinitionFile>
       <AllowIsolation>true</AllowIsolation>
     </Link>
   </ItemDefinitionGroup>
