--- a/src/cascadia/TerminalConnection/TerminalConnection.vcxproj.filters
+++ b/src/cascadia/TerminalConnection/TerminalConnection.vcxproj.filters
@@ -19,6 +19,7 @@
     <ClCompile Include="AzureConnection.cpp" />
     <ClCompile Include="init.cpp" />
     <ClCompile Include="TelnetConnection.cpp" />
+    <ClCompile Include="CTerminalHandoff.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
@@ -26,6 +27,7 @@
     <ClInclude Include="AzureConnection.h" />
     <ClInclude Include="AzureClientID.h" />
     <ClInclude Include="TelnetConnection.h" />
+    <ClInclude Include="CTerminalHandoff.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="ITerminalConnection.idl" />
@@ -41,8 +43,6 @@
     <Natvis Include="$(SolutionDir)tools\ConsoleTypes.natvis" />
   </ItemGroup>
   <ItemGroup>
-    <PRIResource Include="Resources/en-US/Resources.resw">
-      <Filter>Resources\en-US</Filter>
-    </PRIResource>
+    <PRIResource Include="Resources\en-US\Resources.resw" />
   </ItemGroup>
 </Project>
