Fix vtable problem for 0xa0000 ndr version by specifying NT target version explicitly.

--- a/src/common.build.pre.props
+++ b/src/common.build.pre.props
@@ -70,6 +70,9 @@
   </PropertyGroup>
 
   <ItemDefinitionGroup>
+    <Midl>
+      <AdditionalOptions>/target NT100 %(AdditionalOptions)</AdditionalOptions>
+    </Midl>
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
