Allow Github Copilot to be used with Terminal Chat (#18014)
## Summary of the Pull Request

- [x] Implements `GithubCopilotLLMProvider`, which is an implementation
of `ILMProvider` that leverages Github Copilot
- [x] Github auth flow can be initiated from the settings UI
- [x] Modifies the `ILMProvider` interface to include an `IBrandingData`
interface, that allows a provider to specify how it wants certain
elements of the TerminalChat UI to look
- [x] Modified the various telemetry events to include the name of the
currently connected provider

## Validation Steps Performed

- [x] Auth flow works
- [x] Automatic refresh of the auth tokens works, meaning you don't need
to repeat the auth flow every few days

--- a/src/cascadia/QueryExtension/Microsoft.Terminal.Query.Extension.vcxproj
+++ b/src/cascadia/QueryExtension/Microsoft.Terminal.Query.Extension.vcxproj
@@ -59,6 +59,11 @@
     <ClInclude Include="OpenAILLMProvider.h">
       <DependentUpon>OpenAILLMProvider.idl</DependentUpon>
     </ClInclude>
+    <ClInclude Include="GithubCopilotLLMProvider.h">
+      <DependentUpon>GithubCopilotLLMProvider.idl</DependentUpon>
+    </ClInclude>
+    <ClInclude Include="WindowsTerminalIDAndSecret.h">
+    </ClInclude>
   </ItemGroup>
   <!-- ========================= XAML files ======================== -->
   <ItemGroup>
@@ -86,6 +91,9 @@
     <ClCompile Include="OpenAILLMProvider.cpp">
       <DependentUpon>OpenAILLMProvider.idl</DependentUpon>
     </ClCompile>
+    <ClCompile Include="GithubCopilotLLMProvider.cpp">
+      <DependentUpon>GithubCopilotLLMProvider.idl</DependentUpon>
+    </ClCompile>
   </ItemGroup>
   <!-- ========================= idl Files ======================== -->
   <ItemGroup>
@@ -103,6 +111,9 @@
       <SubType>Code</SubType>
     </Midl>
     <Midl Include="OpenAILLMProvider.idl">
+      <SubType>Code</SubType>
+    </Midl>
+    <Midl Include="GithubCopilotLLMProvider.idl">
       <SubType>Code</SubType>
     </Midl>
   </ItemGroup>
