moved split up/down/left/right context menus as submenu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -127,4 +127,7 @@
         "**/obj/**": true,
         "**/packages/**": true,
     },
+    "dotnet.preferCSharpExtension": true,
+    "dotnet.defaultSolution": "OpenConsole.sln",
+    "cquery.cacheDirectory": "${workspaceFolder}/.vscode/cquery_cached_index/",
 }
