--- a/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj
+++ b/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj
@@ -113,6 +113,10 @@
       <DependentUpon>Profiles_Base.xaml</DependentUpon>
       <SubType>Code</SubType>
     </ClInclude>
+    <ClInclude Include="Profiles_Base_Orphaned.h">
+      <DependentUpon>Profiles_Base_Orphaned.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </ClInclude>
     <ClInclude Include="Profiles_Advanced.h">
       <DependentUpon>Profiles_Advanced.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -174,6 +178,9 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Profiles_Base.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Profiles_Base_Orphaned.xaml">
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Profiles_Advanced.xaml">
@@ -269,6 +276,10 @@
       <DependentUpon>Profiles_Base.xaml</DependentUpon>
       <SubType>Code</SubType>
     </ClCompile>
+    <ClCompile Include="Profiles_Base_Orphaned.cpp">
+      <DependentUpon>Profiles_Base_Orphaned.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </ClCompile>
     <ClCompile Include="Profiles_Advanced.cpp">
       <DependentUpon>Profiles_Advanced.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -352,6 +363,10 @@
     <Midl Include="LaunchViewModel.idl" />
     <Midl Include="Profiles_Base.idl">
       <DependentUpon>Profiles_Base.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Midl>
+    <Midl Include="Profiles_Base_Orphaned.idl">
+      <DependentUpon>Profiles_Base_Orphaned.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
     <Midl Include="Profiles_Advanced.idl">
