--- a/.github/workflows/spelling2.yml
+++ b/.github/workflows/spelling2.yml
@@ -1,4 +1,4 @@
-# spelling.yml is blocked per https://github.com/check-spelling/check-spelling/security/advisories/GHSA-g86g-chm8-7r2p
+run-name: # spelling.yml is blocked per https://github.com/check-spelling/check-spelling/security/advisories/GHSA-g86g-chm8-7r2p
 name: Spell checking
 
 # Comment management is handled through a secondary job, for details see:
